<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.InventoryManager"
    tools:context=".View.EditItemFragment" >

    <TextView
        android:id="@+id/item_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/quantity"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name_title" />

    <TextView
        android:id="@+id/item_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_location_title" />

    <TextView
        android:id="@+id/item_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_quantity_title" />

    <EditText
        android:id="@+id/item_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@id/item_name_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/item_quantity_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@id/item_quantity_title"
        app:layout_constraintTop_toBottomOf="@id/item_name_edit_text" />

    <EditText
        android:id="@+id/item_location_edit_text"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@id/item_location_title"
        app:layout_constraintTop_toBottomOf="@id/item_quantity_edit_text" />

    <EditText
        android:id="@+id/item_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_description_title" />


    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/item_description_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>