<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.InventoryManager"
    tools:context=".View.NewUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameTextView"
        android:text="@string/enter_new_username"
        android:textSize="24sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextView"
        android:text="@string/enter_new_password"
        android:textSize="24sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="243dp"
        android:layout_height="44dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"/>


</androidx.constraintlayout.widget.ConstraintLayout>